Fix padding on mobile devices

--- a/source/stylesheets/all.css
+++ b/source/stylesheets/all.css
@@ -504,6 +504,7 @@ a:hover {
 
   .content {
     margin-left: 0px;
+    padding: 15px;
   }
 }
 .post-content img {
